--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "effect": "^3.19.16",
     "express": "^5.2.1",
     "lucide-react": "^0.563.0",
-    "next": "14.2.18",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-markdown": "^10.1.0",
     "sury": "^10.0.4",
     "zod": "^3.24.1"
